prima section con table

--- a/index.html
+++ b/index.html
@@ -19,6 +19,47 @@
     </header>
 
     <!-- sezione principale -->
+    <main>
+        <section>
+            <h2>Le mie spese</h2>
+            
+            <table>
+            <!-- intestazione tabella -->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>costo</th>
+                    </tr>
+                </thead>
+            <!--corpo tabella  -->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>totale</td>
+                        <td></td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tbody>
+                
+            </table>
+            <hr>
+        </section>
+    </main>
 
     <!-- footer con immagini -->
 </body>
